Update Camel_Jolokia_hawtio_debug.md